xtest case changes